# library-management-system

./: .gitignore  CMakeLists.txt  README.md  RESOURCES.md  vcpkg_rf.txt
api/: Prototype_Api.cpp
include/: block.h  blockchain.h  sha256.h  uuid.h
include/api/: app.h
src/: main.cpp
